# face_detection

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  __init__.py  environment.yml  filelist.txt  main.py  mypy.ini  package-lock.json  pyproject.toml  register_known_face.py  requirements-dev.txt  requirements.txt
.github/workflows/: commitlint.yml  deploy.yml  docker-reg.yml  python-app.yml  python-publish.yml
.github/workflows/face_detection/image_processor/: __init__.py  config.py  processor.py
image_processor/: __init__.py  config.py  embeddings.py  processor.py
search_service_repo/: embeddings.py  mcp_server.py  rag_search.py  search_service.py
tests/: setuptstmongo.py  test_processor.py
utils/: manual_match_.py  manual_match_test.py  register_known_face.py
